# quote-of-the-week

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  nextest.toml  quotes-of-the-week.md  release.toml  renovate.json
.github/workflows/: ci.yml  junit-report.yml  rust.yml
scripts/zola/: build.zsh  exec.zsh  serve.zsh
src/: main.rs
web/: config.toml
web/content/: _index.md
web/templates/: index.html
