[package]
name = "twir-qotw-scraper"
version = "0.1.0"
edition = "2021"
description = "An ad-hoc, just-for-fun project of Rust Hack and Learn Meetup Berlin."
license = "CC0-1.0"
repository = "https://github.com/LeoniePhiline/twir-qotw-scraper"
keywords = ["this week in rust", "quote of the week"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4.37", default-features = false }
color-eyre = "0.6.3"
gix = { version = "0.61.0", features = ["blocking-http-transport-reqwest-rust-tls"] }
nom = "7.1.3"
