[package]
name = "quote-of-the-week"
version = "0.1.3"
edition = "2021"
description = "An ad-hoc, just-for-fun project of Rust Hack and Learn Meetup Berlin."
license = "CC0-1.0"
repository = "https://github.com/LeoniePhiline/quote-of-the-week"
keywords = ["this week in rust", "quote of the week"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
chrono = { version = "0.4.38", default-features = false }
color-eyre = { version = "0.6.3", default-features = false, features = ["track-caller"] }
gix = { version = "0.70.0", default-features = false, features = ["interrupt", "worktree-mutation", "blocking-http-transport-reqwest-rust-tls"] }
nom = "7.1.3"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.0"
tempfile = "3.10.1"

[lints.rust]
elided_lifetimes_in_paths = "warn"
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
# must_not_suspend = "warn" # https://github.com/rust-lang/rust/issues/83310
non_ascii_idents = "warn"
nonstandard_style = { level = "warn", priority = -1 }
noop_method_call = "warn"
# unnameable_types = "warn" # https://github.com/rust-lang/rust/issues/48054
unreachable_pub = "warn"
unused = { level = "warn", priority = -1 }
unused_crate_dependencies = "warn"
unused_lifetimes = "warn"

pointer_structural_match = "deny"
# lossy_provenance_casts = "deny" # https://github.com/rust-lang/rust/issues/95228
# fuzzy_provenance_casts = "deny" # https://github.com/rust-lang/rust/issues/95228
unsafe_code = "deny" # Exceptions must be discussed and deemed indispensable and use `#![deny(invalid_reference_casting, unsafe_op_in_unsafe_fn)]`.

[lints.clippy]
pedantic = "warn"
cargo = "warn"
multiple_crate_versions = { level = "allow", priority = 1 }

[profile.dev]
debug = 1 # Less precise locations.
split-debuginfo="unpacked"

[profile.dev.package."*"]
debug = false # No debug symbols for deps.
opt-level = 2 # Makes their code smaller too.

[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = true
debug = 1   # Keep debug symbols for now; less precise locations.
# strip = true # Automatically strip symbols.
